# gencan-sse

./: .gitignore  API_REFERENCE.md  INTEGRATION_GUIDE.md  LICENSE  README.md  README_SERVICE.md  agent_server.py  debug_kokoro.py  pyproject.toml  setup_service.sh  test_all_voices.py  test_avf.py  test_chunker.py  test_emoji.py  test_jonbox.py  test_punct.py  test_punct2.py  test_regex.py  test_tts.py  uninstall_service.sh
examples/: basic_usage.py
gencan_sse/: __init__.py  audio_player.py  chunker.py  classifier.py  cli.py  config.py  engine.py  filters.py  queue.py  types.py  voice_router.py  wav_generator.py
gencan_sse/providers/: __init__.py  avfoundation.py  base.py  gemini.py  jonbox.py  kokoro.py  vertex.py
gencan_sse/server/: app.py  dashboard.html  models.py
tests/: conftest.py  test_audio_player_reconnect.py  test_chunker.py  test_classifier.py  test_config.py  test_engine.py  test_filters.py  test_integration.py  test_kokoro.py  test_provider_gemini.py  test_provider_jonbox.py  test_queue.py  test_server.py  test_stability_fixes.py  test_types.py  test_wav_generator.py
