[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gencan-sse"
version = "0.1.0"
description = "GenCan Speech Synthesis Engine — standalone, reusable TTS pipeline with synchronous API and pluggable providers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jon Heselton"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pyaudio>=0.2.14",
]

[project.optional-dependencies]
gemini = ["google-genai>=0.1.1", "python-dotenv>=1.0.0"]
yaml = ["pyyaml>=6.0.1"]
server = ["fastapi>=0.110.0", "uvicorn>=0.29.0", "pydantic>=2.6.0"]
macos = ["pyobjc-framework-AVFoundation>=10.0", "pyobjc-framework-Cocoa>=10.0", "mlx-audio>=0.1.0"]
all = ["google-genai>=0.1.1", "python-dotenv>=1.0.0", "pyyaml>=6.0.1", "fastapi>=0.110.0", "uvicorn>=0.29.0", "pydantic>=2.6.0", "pyobjc-framework-AVFoundation>=10.0", "pyobjc-framework-Cocoa>=10.0", "mlx-audio>=0.1.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pyyaml>=6.0.1", "google-genai>=0.1.1", "python-dotenv>=1.0.0", "fastapi>=0.110.0", "uvicorn>=0.29.0", "pydantic>=2.6.0", "httpx>=0.27.0", "pyobjc-framework-AVFoundation>=10.0", "pyobjc-framework-Cocoa>=10.0", "mlx-audio>=0.1.0"]

[project.scripts]
gencan-server = "gencan_sse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gencan_sse*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
